# kyle

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Kylefile  README.md  go.mod  install.ps1  install.sh  llms.txt
.github/workflows/: ci.yml  release.yml
cmd/do/: main.go
docs/: biome.json  components.json  package-lock.json  package.json
docs/app/: globals.css  layout.tsx  page.tsx
docs/app/docs/: _meta.ts  layout.tsx
docs/app/docs/changelog/: page.mdx
docs/app/docs/cli/: page.mdx
docs/app/docs/configuration/: page.mdx
docs/app/docs/getting-started/: page.mdx
docs/components/: FaultyTerminal.tsx  Logo.tsx  ThemeToggle.tsx  TocFooter.tsx
docs/components/retroui/: Button.tsx
docs/public/: install.ps1  install.sh  llms.txt
internal/cli/: cli.go  config.go  init.go
internal/config/: format.go  kylefile.go  loader.go  toml.go  yaml.go
internal/runner/: runner.go
internal/settings/: settings.go
src/: lib.rs  main.rs  output.rs
src/cli/: completions.rs  config.rs  init.rs  mod.rs  upgrade.rs
src/config/: composer_json.rs  deno_json.rs  format.rs  justfile.rs  kylefile.rs  loader.rs  makefile.rs  mod.rs  package_json.rs  pyproject.rs  rakefile.rs  standard.rs  taskfile.rs
src/mcp/: mod.rs  tools.rs
src/namespace/: discovery.rs  mod.rs
src/runner/: mod.rs
src/settings/: mod.rs
tests/: cli.rs
tests/shell/: test-config.sh  test-file-detection.sh  test-format-detection.sh  test-help-version.sh  test-init.sh  test-install-upgrade.sh  test-lib.sh  test-namespaces.sh  test-reserved-keywords.sh  test-task-execution.sh
(+5 files in other folders)
