[package]
name = "kyle"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yml = "*"
toml = { version = "*", features = ["parse", "display"] }
dirs = "*"
clap = { version = "4.5.54", features = ["derive", "color"] }
anstyle = "1"
thiserror = "2.0.18"
anyhow = "1.0.100"
regex = "1"
walkdir = "2"
serde_json = "1"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
tempfile = "*"
