[package]
name = "kyle"
version = "0.1.2"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
toml = { version = "0.9.11", features = ["parse", "display"] }
dirs = "6.0.0"
clap = { version = "4.5.57", features = ["derive", "color"] }
anstyle = "1.0.13"
thiserror = "2.0.18"
anyhow = "1.0.101"
regex = "1.12.3"
walkdir = "2.5.0"
serde_json = "1.0.149"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
